--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
+:root {
+  --light-color: white;
+}
+
 * {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
-  /* outline: solid;
+  outline: solid;
   outline-color: red;
-  outline-width: 1px; */
+  outline-width: 1px;
   font-family: "Roboto";
   text-decoration: none;
 }
@@ -12,22 +16,27 @@
 .main-container {
   height: 100vh;
   display: grid;
-  grid-template-columns: 300px 1fr;
-  grid-template-rows: 200px 1fr;
+  grid-template-columns: 18vw 1fr;
+  grid-template-rows: 180px 1fr;
   grid-template-areas:
     "dashboard header"
     "dashboard main";
 }
 
 .dashboard-nav {
+  width: 18vw;
+  height: 100vh;
   grid-area: dashboard;
-  background-color: #1992d4;
-  color: white;
+  background-color: #ec4899;
+  color: var(--light-color);
   padding: 20px;
   display: grid;
-  grid-template-rows: 50px 300px 150px;
+  grid-template-rows: 50px 320px 150px;
+  grid-template-columns: auto-fit;
   gap: 50px;
   font-weight: 500;
+  position: fixed;
+  z-index: 1;
 }
 
 .dashboard-title {
@@ -36,14 +45,16 @@
   font-size: 1.5rem;
   font-weight: bold;
   gap: 10px;
-  color: white;
+  color: var(--light-color);
+  transition: 0.4s;
 }
 
 .dashboard-title:hover,
 .dashboard-menu:hover {
-  background-color: #1885c0;
-  box-shadow: 0px 0px 4px 2px #167ab1 inset;
+  background-color: #f472b6;
+  box-shadow: 0px 0px 4px 2px#ec4899 inset;
   border-radius: 8px;
+  scale: 1.1;
 }
 
 .dashboard-menu {
@@ -51,17 +62,134 @@
   align-items: center;
   gap: 10px;
   margin-bottom: 20px;
-  color: white;
+  color: var(--light-color);
   padding: 5px;
+  font-size: 1.1rem;
+  transition: 0.4s;
 }
 .header-nav {
+  background-color: var(--light-color);
   grid-area: header;
+  padding: 5px 300px 20px 30px;
+  margin-left: 18vw;
+  height: 180px;
+  position: fixed;
+  width: 100%;
+  box-shadow: 0px 5px 5px #bfc7cf;
+}
+
+.upper-nav {
+  display: flex;
+  align-items: center;
+  height: 50px;
+}
+
+.search-icon {
+  display: flex;
+  align-items: center;
+}
+
+#search-bar {
+  background-color: #e2e8f0;
+  border: none;
+  border-radius: 20px;
+  width: 600px;
+  height: 24px;
+  margin-left: 20px;
+  padding: 5px 10px;
+}
+
+.notification-header {
+  margin-left: 300px;
+  display: flex;
+  align-items: center;
+}
+
+.profile-name-top-header {
+  display: flex;
+
+  font-size: 1.3rem;
+  font-weight: bold;
+}
+
+.profile-icon-top-header,
+.profile-name-top-header {
+  margin-left: 20px;
+}
+
+.lower-nav {
+  margin-top: 20px;
+  display: grid;
+  grid-template-columns: 1fr 400px;
+}
+
+.lower-left-nav {
+  display: grid;
+  grid-template-columns: 82px 1fr;
+  grid-template-rows: 30px 1fr;
+  grid-template-areas:
+    "profile ."
+    "profile .";
+  height: 100%;
+  width: 600px;
+}
+
+.lower-nav-profile-icon {
+  grid-area: profile;
+  display: flex;
+  align-items: center;
+}
+
+.greetings {
+  font-weight: 800;
+  padding-top: 5px;
+}
+
+.name {
+  padding-top: 5px;
+  font-size: 1.6rem;
+  font-weight: 900;
+}
+
+.lower-right-nav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+
+.lower-right-nav button {
+  border: none;
+  color: white;
+  background-color: #ec4899;
+  padding: 5px 20px;
+  border-radius: 20px;
+  margin-right: 20px;
+  width: 100px;
+  height: 42px;
+  font-size: 1.1rem;
+  transition: 0.3s;
+}
+
+.lower-right-nav button:hover {
+  cursor: pointer;
+  background-color: #f472b6;
+  scale: 1.1;
 }
 
 .main-content {
   grid-area: main;
+  background-color: #e2e8f0;
+  padding-left: 10px;
+}
+
+.main-content-container {
+  margin-top: 24px;
+  display: grid;
+  grid-template-columns: 1fr 300px;
+  grid-template-areas: "main alert";
 }
 
 .alerts {
-  justify-self: right;
+  grid-area: alert;
 }
